--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "16.0.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "recharts": "^3.3.0",
     "swr": "^2.3.6",
     "zustand": "^5.0.8"
   },
